[tool.poetry]
name = "dino"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pycocotools = "^2.0.2"
scipy = "1.8.1"
panopticapi = {git = "https://github.com/cocodataset/panopticapi.git"}
cython = "^0.29.35"
submitit = "^1.4.5"
termcolor = "^2.3.0"
addict = "^2.4.0"
yapf = "^0.40.1"
timm = "^0.9.2"
torch = ">=1.8.1"
torchvision = ">=0.8"
MultiScaleDeformableAttention = {git = "https://github.com/IDEA-Research/DINO.git", subdirectory = "models/dino/ops"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
